Header section done

--- a/index.html
+++ b/index.html
@@ -4,10 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelostory</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/1aee7c6036.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="Images/Group 40071 (2).png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     
+    <!-- header start -->
+
+    <header class="header">
+        <nav>
+            <div class="header_content">
+<div class="logo">
+    <img src="Images/Group 40071 (2).png" alt="">
+</div>
+<div class="header_name">
+    <h3>Travel<span>O</span>story</h3>
+</div>
+            </div>
+    <div class="header_item">
+    <ul>
+        <li><a href="">Home</a></li>
+        <li><a href="">Packages</a></li>
+        <li><a href="">Testimonial</a></li>
+        <li><a href="">Blog</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href=""><i class="fa-solid fa-bars"></i></a></li>
+    </ul>
+    </div>
+        </nav>
+
+
+
+<div class="banner">
+<div class="banner_all_content">
+    <div class="banner_content">
+        <h3>Explore Your Travel</h3>
+        <p>Explore your travel with us. We have the best offer to provide. So, if you want to explore connect with us.</p>
+    </div>
+
+    <div class="banner_form">
+        <form action="" class="banner_info">
+            <input type="text" id="input_text" placeholder="Where go">
+         <button class="btn_form">When <i class="fa-solid fa-angle-down"></i></button>
+         <button class="btn_form">Select Type <i class="fa-solid fa-angle-down"></i></button>
+            <button class="btn_primary"><i class="fa-solid fa-magnifying-glass"></i> Find Now</button>
+        </form>
+    </div>
+</div>
+</div>
+
+
+
+    </header>
+
+
+     <!-- header end -->
+<main></main>
+
+
+
+<footer></footer>
+
+
+
+
+
+
+
+
+
 </body>
 </html>
