Popular section done

--- a/index.html
+++ b/index.html
@@ -63,7 +63,38 @@
 
 
      <!-- header end -->
-<main></main>
+<main>
+<section class="popular">
+    <div class="popular_tour">
+<h3>Our Popular Tours</h3>
+<p>We have various destination where you can visit.
+
+    <ul>
+        <li>Norway is the most beautiful where you can visit with your family.</li>
+        <li>Denmark is the most beautiful where you can visit with your family.</li>
+        <li>Turkey is the most beautiful where you can visit with your family.</li>
+    </ul>
+    </p>
+<p>
+    These are the most demanded one. You can choose from any those. 
+</p>
+<button class="btn_primary-2">Read More</button>
+    </div>
+
+    <div class="popular_img">
+<img src="Images/Rectangle 4.png" alt="">
+    </div>
+</section>
+
+
+
+
+
+
+
+
+
+</main>
 
 
 
